@@ -12,6 +12,7 @@
 #endif
 #include "UDSocket.hpp"
 
+#include <string.h>
 #include <syslog.h>
 #include <csignal>
 #include <fcntl.h>
